Fix blockquote paragraph spacing

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -105,6 +105,9 @@ blockquote
   padding .25rem 0 .25rem 1rem
 
   & > p
+    margin 0 0 1rem 0
+
+  & > p:last-child
     margin 0
 
   cite {
